Feb 18, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- fix use of wrong server type when adding servers (#1143801, thanks roerich
  and kracho for helping to debug this)

Feb 05, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- make all icons themeable
- make yellow man actually yellow instead of green

Feb 04, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- add --nomapscan option
- add ET Gslist master
- mark q3 servers with protocol different from master as incompatible

Feb 03, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- update Danish translation (Morten Brix Pedersen)

Jan 30, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- remove quakeforge specials
- remove no longer needed ssam notes
- fix saving of quake2 passwords (#1112381)

Jan 25, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Halflife2 support (untested)

Jan 21, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- highly experimental: optionally use DT_AUXILIARY stub libraries to not depend
  on libGeoIP and libgdk_pixbuf at runtime

Jan 12, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- split get_new_defaults into game specific functions
- fix doom3 protocol detection (#1092165)

Jan 11, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
- Fix crashes due to wrong return type of callbacks (#1098910, patch by Jochen
  Baier)
- fix q1/qw/q2 skin list update

Dec 23, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- don't try to scan home directories for maps if the directory
  doesn't exist (reported by Steffen Pankratz)

Dec 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- prepare for 1.0.2
- set TF_U2_NAMES qstat flag for armyops
- require qstat 2.7

Dec 19, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- manpage corrections
- add Netpanzer master

Nov 26, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- add gslist master for UT, remove Epic one
- updates for 1.0.1

Nov 22, 2004: Ludwig Nussel <l-n@users.sourceforge.net>
- update German translation because of typo